<resources>
    <string name="app_name">Surfmate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Surfmate</string>
    <string name="nav_header_subtitle">20099913@mail.wit.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_favourites">View Favourites</string>

    <string name="menu_list">Surf Spots</string>
    <string name="menu_add">Add a Surf Spot</string>
    <string name="menu_about">About</string>

    <string name="save_surfspot">Save Surf Spot</string>
    <string name="hint_surfspotName">Name</string>
    <string name="menu_cancelSurfspot">Cancel</string>
    <string name="button_addImage"> Add Image </string>
    <string name="edit_image"> Edit Image </string>
    <string name="delete_surfspot">Delete Surf Spot</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="name_title">Name</string>
    <string name="observations_title">Observations</string>
    <string name="viewMap_button">View Map</string>
    <string name="rating">Spot Rating</string>
    <string name="surfspotError">Error adding spot</string>
    <string name="some_fields_required">More fields required</string>
    <string name="aboutUs_message">Welcome to Surfmate !</string>
    <string name="messageLoading">Please Wait, loading...</string>
    <string name="google_api_key">AIzaSyDuqUV3FTBeD86pp91HZCt_68e_sivvx9g</string>



    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="search">Search :</string>
    <string name="select_profile_image">Select Profile Image</string>
</resources>
