<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="ie.setu.surfmate.ui.list.SurfspotsFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list_spots" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateSurfspotsFragment"
            app:destination="@id/updateSurfspotsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addFragment"
        android:name="ie.setu.surfmate.ui.add.AddSpotFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_spot" >
        <action
            android:id="@+id/action_addFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_addFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <argument
            android:name="surfspotid"
            app:argType="string"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.setu.surfmate.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_aboutFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateSurfspotsFragment"
        android:name="ie.setu.surfmate.ui.update.UpdateSurfspotsFragment"
        android:label="View/Update Surf Spot" >
        <action
            android:id="@+id/action_updateSurfspotsFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="surfspotid"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.setu.surfmate.ui.map.MapsFragment"
        android:label="Spot Map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_addFragment"
            app:destination="@id/addFragment" />
    </fragment>
</navigation>