<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.add.AddSpotFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:layout_marginTop="-1dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_surfspotName"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/observations"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/observations_title"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="339dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/save_surfspot"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />



                <ImageView
                    android:id="@+id/SurfspotImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="336dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/deleteSurfspot"
                    android:layout_width="339dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/delete_surfspot"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rateHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rate the spot"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/ratingBar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1.0" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>