<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="surfspotvm"
            type="ie.setu.surfmate.ui.update.UpdateSurfspotsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.update.UpdateSurfspotsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:layout_marginTop="-1dp"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/hint_surfspotName"
                        android:inputType="text"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:text="@={surfspotvm.observableSurfspot.name}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />


                    <EditText
                        android:id="@+id/surfspotObservations"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:autofillHints=""
                        android:hint="@string/observations_title"
                        android:inputType="text"
                        android:maxLength="250"
                        android:maxLines="3"
                        android:padding="8dp"
                        android:text="@={surfspotvm.observableSurfspot.observations}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />




                    <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/blue"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/edit_image"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/SurfspotImage"
                        android:layout_width="match_parent"
                        android:layout_height="165dp"
                        android:padding="12dp"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/rateHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rate the spot"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/ratingBar"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1.0" />


                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:background="@color/blue"
                        android:text="@string/save_surfspot"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/deleteSurfspot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:backgroundTint="@color/blue"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/delete_surfspot"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="invisible" />

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>